--- a/css/style.css
+++ b/css/style.css
@@ -1,79 +1,158 @@
-*{
-    /* margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box; */
-}
-body{ 
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-}
-section{
-    height: 500px;
-    padding-bottom: 150px;
-}
-.top-banner{
-    background-image: url("../images/top-banner.png");
-    background-repeat: no-repeat;
-}
-.half-width{
-    width:40%;
-    float: left;
-    margin-left: 5%;
-    padding-left: 2%;
-}
-h1{
-    font-size: 50px;
-}
-h1 span{
-    color: orange;
-}
-.half-width img{
-    width: 100%;
-}
-.anchor-button{
-    text-decoration: none;
-    background: linear-gradient(45deg, lightsalmon, tomato);
-    padding: 10px 40px;
-    border-radius: 5px;
-    color: white;
-    font-weight: 700;
-}
-p{
-    color: dimgray;
-}
-.dream-area{
-    background-image: url("../images/dream-bg.png");
-    background-repeat: no-repeat;
-    background-position: right;
-}
-h2{
-    font-size: 40px;
-}
-.experience-area{
-    background-image: url("../images/exp-bg.png");
-    background-repeat: no-repeat;
-    background-position: left;
-}
-.experience-area h3{
-    color: orange;
-}
+header nav ul, .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
 
-.experience-area div{
-    box-shadow: 5px 7px 40px gray;
-    height: 80%;
-}
-#full-stack{
-    border-left: 7px solid;
-    border-image: linear-gradient(180deg, lightsalmon, tomato);
-    border-image-slice: 1;
-}
-#baby-web{
-    border-left: 7px solid;
-    border-image: linear-gradient(180deg, blue, cyan);
-    border-image-slice: 1;
-}
-footer p{
-    text-align: center;
-}
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+img {
+  max-width: 100%; }
+
+body {
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #333; }
+
+header {
+  padding: 10px 0; }
+  header .logo {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+    padding: 0 15px; }
+    header .logo a {
+      display: block;
+      text-decoration: none;
+      font-size: 30px;
+      font-weight: 900;
+      color: #333; }
+  header nav {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 80%;
+    flex: 0 0 80%;
+    max-width: 80%;
+    padding: 0 15px; }
+    header nav ul {
+      justify-content: flex-end; }
+      header nav ul li {
+        list-style: none; }
+        header nav ul li a {
+          display: block;
+          font-size: 18px;
+          padding: 10px 20px;
+          text-transform: capitalize;
+          text-decoration: none;
+          color: #333; }
+
+.container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto; }
+
+.row .col-6 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 50%;
+  flex: 0 0 50%;
+  max-width: 50%;
+  padding: 0 15px; }
+
+section {
+  padding: 100px 0; }
+
+.about-me-section {
+  background-image: url(../images/header-bg.png); }
+  .about-me-section .row {
+    align-items: center;
+    min-height: 70vh; }
+
+h3 {
+  font-size: 30px; }
+
+h1 {
+  font-size: 80px;
+  color: #089D49;
+  line-height: 1; }
+
+h2 {
+  font-size: 50px; }
+
+p {
+  color: #333;
+  font-size: 16px;
+  margin: 10px 0;
+  opacity: 0.7; }
+
+.btn, .btn-reverse {
+  display: inline-block;
+  padding: 10px 40px;
+  color: #fff;
+  font-size: 18px;
+  text-decoration: none;
+  border-radius: 5px;
+  transition-duration: 0.3s; }
+
+.btn {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#089d49+0,d4ff00+100 */
+  background: #089d49;
+  /* Old browsers */
+  background: -moz-linear-gradient(left, #089d49 0%, #d4ff00 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, #089d49 0%, #d4ff00 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #089d49 0%, #d4ff00 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$color1', endColorstr='$color2',GradientType=1 );
+  /* IE6-9 */ }
+  .btn:hover {
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#089d49+0,d4ff00+100 */
+    background: #d4ff00;
+    /* Old browsers */
+    background: -moz-linear-gradient(left, #d4ff00 0%, #089d49 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #d4ff00 0%, #089d49 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #d4ff00 0%, #089d49 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$color1', endColorstr='$color2',GradientType=1 );
+    /* IE6-9 */ }
+
+.btn-reverse {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#089d49+0,d4ff00+100 */
+  background: #d4ff00;
+  /* Old browsers */
+  background: -moz-linear-gradient(left, #d4ff00 0%, #089d49 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, #d4ff00 0%, #089d49 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #d4ff00 0%, #089d49 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$color1', endColorstr='$color2',GradientType=1 );
+  /* IE6-9 */ }
+  .btn-reverse:hover {
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#089d49+0,d4ff00+100 */
+    background: #089d49;
+    /* Old browsers */
+    background: -moz-linear-gradient(left, #089d49 0%, #d4ff00 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #089d49 0%, #d4ff00 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #089d49 0%, #d4ff00 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$color1', endColorstr='$color2',GradientType=1 );
+    /* IE6-9 */ }
+
+.biography-section .row {
+  min-height: 70vh;
+  align-items: center; }
+.biography-section img {
+  text-align: left; }
+
+/*# sourceMappingURL=style.css.map */
