--- a/sass/style.scss
+++ b/sass/style.scss
@@ -90,6 +90,9 @@ section{
 }
 .about-me-section{
     background-image: url(../images/header-bg.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     .row{
         align-items: center;
         min-height: 70vh;
@@ -140,6 +143,10 @@ p{
 }
 
 .biography-section{
+    background-image: url(../images/biography-bg.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     .row{
         min-height:70vh;
         align-items: center;
@@ -148,3 +155,29 @@ p{
         text-align: left;
     }
 }
+.latest-work-section{
+    background-image: url(../images/latest-work-bg.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    h2{
+        text-align: center;
+        margin-bottom: 40px;
+    }
+    .row{
+         
+        align-items: center;
+
+        .col-4{
+            @include col(33.33%);
+            padding:0 15px;
+            
+        }
+    }
+    .work-img{
+        box-shadow: 0 20px 50px rgba(0, 0, 0, 0.1);
+    }
+     
+}
+
